--- a/src/commons/style/app.scss
+++ b/src/commons/style/app.scss
@@ -1,6 +1,14 @@
 @import 'normalize';
 @import 'fonts';
 
+html {
+	height: 100%;
+}
+
 body {
-	overflow: hidden;
+	height: 100%;
+}
+
+.app {
+	height: 100%;
 }
