--- a/src/commons/style/loader.scss
+++ b/src/commons/style/loader.scss
@@ -3,6 +3,7 @@
 	width: 100%;
 	height: 100%;
 	background-color: rgb(1, 24, 50);
+	background-size: contain;
 	top: 0;
 	left: 0;
 	display: flex;
@@ -10,6 +11,8 @@
 	justify-content: center;
 	z-index: 100;
 	user-select: none;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .loader__text {
@@ -22,6 +25,8 @@
 	position: relative;
 	z-index: -1;
 	transform-origin: left;
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .loader__thin-line {
@@ -54,6 +59,17 @@
 	animation-duration: .8s;
 	animation-timing-function: ease;
 	animation-fill-mode: forwards;
+}
+
+.loader__state {
+	color: #ffffff;
+	font-family: serif;
+	font-style: italic;
+	font-size: 22px;
+	min-width: 3em;
+	margin-left: .6em;
+	display: inline-block;
+	vertical-align: middle;
 }
 
 @keyframes pageReady {
