--- a/src/commons/style/_fonts.scss
+++ b/src/commons/style/_fonts.scss
@@ -22,7 +22,8 @@
   font-style: normal;
 }
 
-body {
+* {
 	-webkit-font-smoothing: antialiased;
+	-webkit-text-stroke: 0px;
 	-moz-osx-font-smoothing: grayscale;
 }
